@@ -26,6 +26,7 @@ DstDone variable to disable compiler optimizations.
 emacps_v3_10:
 Clear status registers properly in reset.
 Use Versal platform version register.
+Remove peripheral test app support for Versal.
 
 lwip211_v1_1:
 Add support for Versal
